# py-xdelta3

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
tests/: requirements.txt
xdelta3/: _xdelta3.c  main.py
