[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-xdelta3"
version = "0.3.1"
description = "Modern Python wrapper around xdelta3"
readme = "README.md"
requires-python = ">=3.5"
license = {text = "Apache License, Version 2.0"}
authors = [
  {name = "Guilherme M. Miranda", email = "alchemist.software@proton.me"},
  {name = "Samuel Colvin", email = "s@muelcolvin.com"}
]
urls = {homepage = "https://github.com/elf-alchemist/py-xdelta3"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Archiving :: Compression",
]

[tool.setuptools]
packages = ["py-xdelta3"]

[tool.setuptools.package-data]
"xdelta3" = ["_xdelta3.c", "lib/*"]

[tool.setuptools.extension]
_xdelta3 = {
    sources = ["xdelta3/_xdelta3.c"]
    include-dirs = ["./xdelta3/lib"]
    define-macros = [
        ["SIZEOF_SIZE_T", "8"],
        ["SIZEOF_UNSIGNED_LONG_LONG", "8"],
        ["XD3_USE_LARGEFILE64", "1"],
        # Uncomment the next line to enable secondary compression with lzma
        # ["SECONDARY_LZMA", "1"],
        # Uncomment the next line to add verbose debug output to xdelta3
        # ["XD3_DEBUG", "3"]
    ]
}

[tool.setuptools.dynamic]
version = {attr = "xdelta3.version.VERSION"}
