[project]
name = "py_xdelta3"
version = "0.1.0"
description = "Modern Python wrapper around xdelta3"
readme = "README.md"
requires-python = ">=3.5"
license = {text = "Apache License, Version 2.0"}
authors = [
  {name = "Guilherme M. Miranda", email = "alchemist.software@proton.me"},
  {name = "Samuel Colvin", email = "s@muelcolvin.com"}
]
urls = {homepage = "https://github.com/elf-alchemist/py-xdelta3"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Archiving :: Compression",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
